Support 64bit tick (more than 35min)

--- a/discharge-firmware/.vscode/settings.json
+++ b/discharge-firmware/.vscode/settings.json
@@ -43,6 +43,7 @@
         "*.inc": "cpp",
         "cstdint": "cpp",
         "string.h": "c",
-        "functional": "c"
+        "functional": "c",
+        "inttypes.h": "c"
     }
 }
