Update CTRL-MINI code and doc to prepare support for ED r1

--- a/firmware/CTRL-MINI/CMakeLists.txt
+++ b/firmware/CTRL-MINI/CMakeLists.txt
@@ -86,6 +86,7 @@ add_executable(ctrl_fw
 # pull in common dependencies
 target_link_libraries(ctrl_fw pico_stdlib)
 target_link_libraries(ctrl_fw hardware_spi)
+target_link_libraries(ctrl_fw hardware_i2c)
 target_link_libraries(ctrl_fw hardware_pwm)
 
 if (PICO_CYW43_SUPPORTED)
