--- a/firmware/PULSER/CMakeLists.txt
+++ b/firmware/PULSER/CMakeLists.txt
@@ -70,30 +70,31 @@ set(PICO_BOARD pico2 CACHE STRING "Board type")
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(ctrl_fw C CXX ASM)
+project(PULSER_fw C CXX ASM)
 
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(ctrl_fw
+add_executable(PULSER_fw
     main.c
-    ed.c
-    md.c
     )
 
 # pull in common dependencies
-target_link_libraries(ctrl_fw pico_stdlib)
-target_link_libraries(ctrl_fw hardware_spi)
-target_link_libraries(ctrl_fw hardware_i2c)
-target_link_libraries(ctrl_fw hardware_pwm)
+target_link_libraries(PULSER_fw pico_stdlib)
+target_link_libraries(PULSER_fw pico_i2c_slave)
+target_link_libraries(PULSER_fw hardware_pwm)
+target_link_libraries(PULSER_fw hardware_i2c)
+target_link_libraries(PULSER_fw hardware_adc)
+target_link_libraries(PULSER_fw pico_multicore)
+
 
 if (PICO_CYW43_SUPPORTED)
-    target_link_libraries(ctrl_fw pico_cyw43_arch_none)
+    target_link_libraries(PULSER_fw pico_cyw43_arch_none)
 endif()
 
 # create map/bin/hex file etc.
-pico_add_extra_outputs(ctrl_fw)
+pico_add_extra_outputs(PULSER_fw)
 
 # add url via pico_set_program_url
