--- a/dicer/tsconfig.json
+++ b/dicer/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["ES2022", "DOM"],
     "module": "ES2022",
     "moduleResolution": "node",
-    "allowJs": true,
+    "allowJs": false,
     "checkJs": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
