--- a/shell-dashboard/tsconfig.json
+++ b/shell-dashboard/tsconfig.json
@@ -4,24 +4,18 @@
     "lib": ["ES2022", "DOM"],
     "module": "ES2022",
     "moduleResolution": "node",
-    "allowJs": false,
-    "checkJs": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
     "sourceMap": true,
-    "removeComments": false,
-    "baseUrl": "."
+    "removeComments": false
   },
   "include": [
-    "*.ts",
-    "types.d.ts"
+    "*.ts"
   ],
   "exclude": [
     "node_modules",
-    "dist",
-    "vue.global.js",
-    "chart.und.js"
+    "dist"
   ]
 }
