--- a/shell-dashboard/package.json
+++ b/shell-dashboard/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "description": "Shell dashboard for Spark",
   "scripts": {
-    "build": "rm -rf dist && mkdir -p dist && tsc && cp index.html logo.png dist/ && cp node_modules/vue/dist/vue.esm-browser.js node_modules/chart.js/dist/chart.umd.js dist/",
-    "dev": "nodemon --watch . --ignore dist --ignore node_modules --ext ts,html --exec 'npm run build'"
+    "build": "vite build",
+    "build-watch": "vite build --watch"
   },
   "dependencies": {
-    "vue": "^3.5.13",
-    "chart.js": "^4.5.0"
+    "chart.js": "^4.5.0",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
     "@types/node": "^20.0.0",
-    "nodemon": "^3.0.0"
+    "@vitejs/plugin-vue": "^6.0.1",
+    "typescript": "^5.0.0",
+    "vite": "^7.1.7"
   }
 }
