--- a/shell-dashboard/package.json
+++ b/shell-dashboard/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Shell dashboard for Spark",
   "scripts": {
-    "build": "vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "build-watch": "vite build --watch"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@types/node": "^20.0.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "typescript": "^5.0.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vue-tsc": "^3.1.0"
   }
 }
